--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "stripe": "^12.14.0",
     "styled-components": "^6.0.5",
     "web-vitals": "^3.4.0"
