--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "airtable-node": "^0.1.20",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
