--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.4",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.11.1",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
     "@tanstack/react-query": "^4.32.6",
@@ -14,9 +19,12 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "airtable-node": "^0.1.20",
+    "antd": "^5.8.3",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
+    "rc-time-picker": "3.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -24,7 +32,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "stripe": "^12.14.0",
-    "styled-components": "^6.0.5",
+    "styled-components": "^6.0.7",
     "web-vitals": "^3.4.0"
   },
   "scripts": {
