--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ REACT_APP__SECRET=e38d8891-7e6b-2d3c-fc87-56cf372e84d0
 
 REACT_APP_STRAPI_URL=http://localhost:1337
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBnYI_OGnaDRoQAR2GXebTcK6jzatHiRug
+REACT_APP_NODE_ENV=local
 
