--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "airtable-node": "^0.1.20",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
     "rc-time-picker": "3.7.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
