--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "stripe": "^12.14.0",
     "styled-components": "^6.0.7",
     "web-vitals": "^3.4.0"
