--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
