--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap": "^2.8.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.10.1",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.14.2",
